--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -2,7 +2,7 @@
 
 Добро пожаловать в хранилище официальной документации Obsidian! Эта страница содержит краткий указатель вещей, которые могут вас заинтересовать.
 
-Ознакомиться с веб версией: https://publish.obsidian.md/help-ru %%site must be added when docs translation is ready%%
+Ознакомиться с веб-версией: https://publish.obsidian.md/help-ru %%site must be added when docs translation is ready%%
 
 Если вы обнаружили ошибки или недостающую информацию, вы можете внести свой вклад в работу этого сайта здесь: https://github.com/obsidianmd/obsidian-docs/
 
@@ -10,17 +10,17 @@
 
 Наша [[Сведения об авторах|страница авторов]] перечисляет всех замечательных людей благодаря которым у нас есть Obsidian.
 
-Вы можете прочитать более подробную информацию о разработчиках на страница [About](https://obsidian.md/about) официального сайта Obsidian.
+Вы можете прочитать более подробную информацию о разработчиках на странице [About](https://obsidian.md/about) официального сайта Obsidian.
 
 ## Obsidian
 
 ### О программе
 
-- Почитать [[Obsidian|о нашей фислософии]].
+- Почитать [[Obsidian|о нашей философии]].
 
 ### Начало работы
 
-- Хотите больше функциональности? Попробуйте [[Палитра команд|Палитру команд]], которая содержит все действия, которые могут потребоваться вам для работы с Obsidian. Просто нажмите `Ctrl/Cmd-P` и начните печатать.
+- Хотите больше функциональности? Попробуйте [[Палитра команд|Палитру команд]], содержащую все действия, которые могут потребоваться вам для работы с Obsidian. Просто нажмите `Ctrl/Cmd-P` и начните печатать.
 - Изучите особенности нашего Markdown вместе c [[Форматирование заметок|форматированием заметок]].
 - Разберитесь с тем [[Создание заметок|как создавать новые заметки]],
 - И с тем [[Создание внутренних ссылок|как создавать внутренние ссылки]].
@@ -29,7 +29,7 @@
 
 ### Официальные плагины
 
-![[Список плагинов#Список официальных плагинов]]
+![[Список плагинов#Текущий список официальных плагинов]]
 
 ### Продвинутое использование
 
