--- a/Вложения/Демонстрация слайдов.md
+++ b/Вложения/Демонстрация слайдов.md
@@ -36,4 +36,4 @@
 - Мы не верим в единое решение, которое подойдет всем
 - Obsidian построен на плагинах
     - Включайте и отключайте их исходя из своего рабочего процесса
-    - Рассматриваем возможность сторонних плагинов после v1.0.0
+    - Рассматриваем возможность сторонних плагинов после версии 1.0.0
