--- a/Кастомизация/Пользовательские сочетания клавиш.md
+++ b/Кастомизация/Пользовательские сочетания клавиш.md
@@ -6,8 +6,8 @@
 
 ### Просмотр сочетаний клавиш
 
-Самый быстрый способ просмотра сочетаний клавиш для определённой команды – это поиск этой команды в [[Палитра команд|Палитре команд]]. Если для этой команды уже отображаются сочетания клавиш, значит они уже заданы.
+Самый быстрый способ просмотра сочетаний клавиш для определённой команды — это поиск этой команды в [[Палитра команд|Палитре команд]]. Если для этой команды уже отображаются сочетания клавиш, значит они уже заданы.
 
 ### Настройка сочетаний клавиш
 
-Чтобы добавить новое сочетание клавиш, удалить его, или восстановить значение по умолчанию, перейдите в Настройки => Сочетания клавиш. Обратите внимание, что вы также можете отфильтровать список команд, поскольку он довольно длинный.
+Чтобы добавить новое сочетание клавиш, удалить его, или восстановить значение по умолчанию, перейдите в раздел **Настройки => Сочетания клавиш**. Обратите внимание, что вы также можете отфильтровать список команд, поскольку он довольно длинный.
