--- a/Лицензии и дополнительные сервисы/Коммерческая лицензия.md
+++ b/Лицензии и дополнительные сервисы/Коммерческая лицензия.md
@@ -50,4 +50,4 @@
 > \
 > A: Если в ваших заметках содержатся данные, непосредственно связанные с рабочими проектами или процессами компании, в которой работает более одного человека, то вам необходима коммерческая лицензия.
 
-Если у вас все еще остались вопросы относительно требований коммерческой лицензии, напишите нам по адресу support@obsidian.md и подробно опишите вашу ситуацию.
+Если у вас всё ещё остались вопросы относительно требований коммерческой лицензии, напишите нам по адресу support@obsidian.md и подробно опишите вашу ситуацию.
