--- a/Начните здесь.md
+++ b/Начните здесь.md
@@ -1,4 +1,4 @@
-Привет! Я – заметка в твоем хранилище.
+Привет! Я — заметка в твоем хранилище.
 
  И в то же время я просто файл Markdown где-то на твоем диске. Здесь всё в формате простого текста, поэтому тебе не стоит волноваться, что ты меня потеряешь, если вдруг [[Obsidian]] однажды исчезнет.
 
@@ -23,7 +23,7 @@
 
 ## Рабочие процессы
 
-Obsidian это инструмент, который может использоваться множеством различных способов – от простого списка заметок до очень мощной системы управления знаниями. Мы предлагаем начинать в своем темпе и сделать из Obsidian инструмент, который нужен именно вам. 
+Obsidian это инструмент, который может использоваться множеством различных способов — от простого списка заметок до очень мощной системы управления знаниями. Мы предлагаем начинать в своем темпе и сделать из Obsidian инструмент, который нужен именно вам. 
 
 Вот несколько способов начать:
 
