--- a/Области/Расположение областей.md
+++ b/Области/Расположение областей.md
@@ -1,4 +1,4 @@
-Одна из вещей, которая отличает Obsidian от других приложений для создания заметок – это то, насколько легко открыть несколько файлов в выбранном вами расположении.
+Одна из вещей, которая отличает Obsidian от других приложений для создания заметок — это то, насколько легко открыть несколько файлов в выбранном вами расположении.
 
 Окно, в котором открывается файл, мы называем «областью». Вы можете использовать сколько угодно областей.
 
@@ -6,13 +6,13 @@
 
 #### Открытие ссылок
 
-Как правило, вы можете кликнуть по ссылке на файл, удерживая `Ctrl` (в Windows и Linux) или `Cmd` (в macOS), чтобы открыть его в новой области. Это включает в себя клик по файлам в [[Файловый менеджер|файловом менеджере]], в результатах [[Поиск|поиска]], в [[Обратные ссылки|обратных ссылках]], в [[Граф|Графе]] и так далее.
+Как правило, вы можете нажать на ссылку на файл, удерживая `Ctrl` (в Windows и Linux) или `Cmd` (в macOS), чтобы открыть его в новой области. Это включает в себя нажатие на файлы в [[Файловый менеджер|Файловом менеджере]], в результатах [[Поиск|поиска]], в [[Обратные ссылки|обратных ссылках]], в [[Граф|Графе]] и так далее.
 
-Заметным исключением является работа в режиме редактирования. Поскольку в режиме редактирования клик по ссылке ведет к ее редактированию, а не к переходу по ней, как это происходит в случае удерживания `Ctrl/Cmd` с кликом по ссылке. Поэтому вам нужно будет удерживать `Shift` в дополнение к `Ctrl/Cmd`, чтобы открыть ссылку в новой области.
+Заметным исключением является работа в режиме редактирования. Поскольку в режиме редактирования нажатие на ссылку ведет к ее редактированию, а не к переходу по ней, как это происходит в случае удерживания `Ctrl/Cmd` с нажатием на ссылку. Поэтому вам нужно будет удерживать `Shift` в дополнение к `Ctrl/Cmd`, чтобы открыть ссылку в новой области.
 
 #### Разделение текущей области
 
-Вы можете использовать меню в правом верхнем углу области, чтобы выбрать пункты «Разделить по вертикали» или «Разделить по горизонтали» для открытия копии текущего файла в отдельной области.
+Вы можете использовать дополнительное меню «Ещё» в правом верхнем углу области, чтобы выбрать пункты «Разделить по вертикали» или «Разделить по горизонтали» для открытия копии текущего файла в отдельной области.
 
 #### Открытие связанных областей
 
@@ -20,7 +20,7 @@
 
 ### Перегруппировка областей
 
-Для перемещения области, просто потяните за значок области в левом верхнем углу. Когда вы перетаскиваете область, места, куда можно ее переместить будут визуально выделены. Перенос в одну из четырех частей соседней области создает горизонтальный или вертикальный разделитель между областями. А перенос в центральную часть соседней области меняет их местами.
+Для перемещения области, просто потяните за значок области в левом верхнем углу. Когда вы перетаскиваете область, места, куда можно ее переместить будут подсвечены. Перенос в одну из четырех частей соседней области создает горизонтальный или вертикальный разделитель между областями. А перенос в центральную часть соседней области меняет их местами.
 
 Вы также можете перемещать области в боковые панели. Области расположенные на боковых панелях работают немного по-другому, для получения дополнительной информации см. раздел [[Расположение областей#Области в боковой панели|Области в боковой панели]] ниже.
 
@@ -30,7 +30,7 @@
 
 #### Области в боковой панели делят пространство с вкладками
 
-Когда вы перетаскиваете область в боковую панель, там для нее создается новая вкладка. Доступ к различным областям в боковой панели можно получить кликнув на соответствующий значок вкладки.
+Когда вы перетаскиваете область в боковую панель, там для неё создается новая вкладка. Доступ к различным областям в боковой панели можно получить нажав на соответствующий значок вкладки.
 
 #### Области в боковой панели не отображают имя файла
 
@@ -44,7 +44,7 @@
 
 #### Переключение режимов редактирования и просмотра в боковой панели
 
-Сочетание клавиш для переключения между режимами редактирования и предварительного просмотра работает только в основном рабочем пространстве. В боковой панели вам необходимо использовать меню, которое можно вызвать по правому клику на вкладке файла, и выбрать «Просмотр» или «Редактировать» в зависимости от текущего режима области.
+Сочетание клавиш для переключения между режимами редактирования и предварительного просмотра работает только в основном рабочем пространстве. В боковой панели вам необходимо использовать меню, которое можно вызвать нажав правую кнопку мыши на вкладке файла, и выбрать «Просмотр» или «Редактировать» в зависимости от текущего режима области.
 
 ### Сохранение и загрузка расположения областей
 
