--- a/Плагины/Граф.md
+++ b/Плагины/Граф.md
@@ -1,4 +1,4 @@
-Показывает [[Создание внутренних ссылок|внутренние ссылки]] между вашими заметками в виде графа.
+Плагин «Граф» показывает [[Создание внутренних ссылок|внутренние ссылки]] между вашими заметками в виде графа.
 
 Заметки с большим количеством ссылок появляются на графе как более крупные узлы.
 
@@ -6,7 +6,7 @@
 
 ### Советы по визуализации
 
-- Вы можете навести курсор на каждый узел, чтобы выделить его соединения, затеняя все остальное.
+- Вы можете навести курсор на каждый узел, чтобы выделить его соединения, затеняя всё остальное.
 - Вы можете перетаскивать узлы, чтобы упорядочить граф. Это может быть полезно, если некоторые узлы перекрывают друг друга.
 
 ### Советы по перемещению
