--- a/Плагины/Обратные ссылки.md
+++ b/Плагины/Обратные ссылки.md
@@ -1,4 +1,4 @@
-Плагин обратных ссылок показывает, как на текущую заметку ссылаются в других заметках. Таким образом можно отследить связи между заметками в обе стороны.
+Плагин «Обратные ссылки» показывает, как на текущую заметку ссылаются в других заметках. Таким образом можно отследить связи между заметками в обе стороны.
 
 После включения плагина в строке состояния будет отображаться количество обратных ссылок на текущую заметку.
 
