--- a/Плагины/Открыть в приложении по умолчанию.md
+++ b/Плагины/Открыть в приложении по умолчанию.md
@@ -1,4 +1,4 @@
-Открывает текущий файл в приложении, выбранном по умолчанию на вашем компьютере. Открытие можно вызвать в дополнительном меню в правом верхнем углу области заметки:
+Плагин «Открыть в приложении по умолчанию», позволяет открыть файл в приложении, выбранном по умолчанию на вашем компьютере. Открытие можно вызвать в дополнительном меню в правом верхнем углу области заметки:
 
 ![[Pasted image 5.png]]
 
