--- a/Плагины/Панель тегов.md
+++ b/Плагины/Панель тегов.md
@@ -1,10 +1,10 @@
-Добавляет на правую панель отдельную вкладку, на которой отображаются все имеющиеся у вас теги, а также их количество.
+Плагин «Панель тегов» добавляет на правую панель отдельную вкладку, на которой отображаются все имеющиеся у вас теги, а также их количество.
 
-При нажатии на тег активируется поиск по этому тегу. Для добавления в поиск дополнительного тега или его удаления, кликните по нему удерживая `Ctrl/Cmd`.
+При нажатии на тег активируется поиск по этому тегу. Для добавления в поиск дополнительного тега или его удаления, нажмите на него удерживая `Ctrl/Cmd`.
 
 ### Сортировка
 
-По умолчанию тэги отсортированы по убыванию частоты использования тега. Вы можете переключиться на сортировку по алфавиту или изменить направление сортировки.
+По умолчанию теги отсортированы по убыванию частоты использования тега. Вы можете переключиться на сортировку по алфавиту или изменить направление сортировки.
 
 ### Вложенные теги
 
