--- a/Плагины/Поиск.md
+++ b/Плагины/Поиск.md
@@ -6,7 +6,7 @@
 
 ### Начните поиск
 
-Вы можете вызвать поиск, нажав `Ctrl-Shift-F` или `Cmd-Shift-F`. Вы также можете настроить это сочетание клавиш в разделе Настройки => Сочетание клавиш. При вызове поиска курсор будет автоматически помещен в строку поиска, чтобы вы могли сразу же начать вводить свой запрос.
+Вы можете вызвать поиск, нажав `Ctrl-Shift-F` или `Cmd-Shift-F`. Вы также можете настроить это сочетание клавиш в разделе **Настройки => Сочетания клавиш**. При вызове поиска курсор будет автоматически помещен в строку поиска, чтобы вы могли сразу же начать вводить свой запрос.
 
 ### Поиск выделенного текста
 
@@ -16,7 +16,7 @@
 
 Obsidian запомнит ваши последние использованные поисковые запросы.
 
-Эти запросы будут отображаться, когда ваш поисковый запрос пуст. Вы можете кликнуть по любому из них, чтобы искать по нему снова, что позволит вам легко повторно выполнить предыдущие запросы.
+Эти запросы будут отображаться, когда ваш поисковый запрос пуст. Вы можете нажать на любой из них, чтобы искать по нему снова. Это позволяет вам легко повторно выполнить предыдущие запросы.
 
 Чтобы очистить историю поиска, просто нажмите на кнопку `X`.
 
@@ -56,10 +56,10 @@ Obsidian запомнит ваши последние использованны
 
 ### Сложные поисковые запросы
 
-При создании поискового запроса не забывайте, что клик по переключателю «Объяснить поисковую строку» даст объяснение того, что ищется. Это может быть очень полезно при отладке сложного поискового запроса.
+При создании поискового запроса не забывайте, что нажатие на переключатель «Объяснить поисковую строку» даст объяснение того, что ищется. Это может быть очень полезно при отладке сложного поискового запроса.
 
 - Разделенные пробелом слова в поисковом запросе будут искаться раздельно и независимо в каждой заметке. Например, `foo bar` покажет заметку в которой есть и `foo` и `bar` где угодно в заметке.
-- `"Строки в кавычках"` позволяют искать последовательность слов, разделенных пробелами, иначе говоря – фразы. Таким образом поиск `"foo bar"` с кавычками покажет только те заметки, в которых эти слова стоят последовательно. Можно использовать экранирующий-символ обратной косой черты перед кавычкой `\"` если вам необходимо найти строчку, в которой есть двойная кавычка. Использование `\\` поможет найти обратную косую черту.
+- `"Строки в кавычках"` позволяют искать последовательность слов, разделенных пробелами, иначе говоря — фразы. Таким образом поиск `"foo bar"` с кавычками покажет только те заметки, в которых эти слова стоят последовательно. Можно использовать экранирующий-символ обратной косой черты перед кавычкой `\"` если вам необходимо найти строчку, в которой есть двойная кавычка. Использование `\\` поможет найти обратную косую черту.
 - Возможно использование логических операторов. Используйте `OR` для поиска одного ИЛИ другого. Используйте `-` для отрицательного запроса. Знак пробела используется вместо логического И.
 	- Например: `foo OR bar` найдет все заметки в которых есть одно из этих двух слов. `foo -bar` покажет все заметки в которых есть `foo`, кроме тех, в которых есть `bar`.
 - Круглые скобки могут использоваться для группировки логических операторов. Например, `((a OR b) (c OR d))`. Это может пригодиться при создании сложных запросов, в которых вам важен порядок проверки условий запроса.
