--- a/Плагины/Предпросмотр страницы.md
+++ b/Плагины/Предпросмотр страницы.md
@@ -1,4 +1,4 @@
-Предпросмотр страницы позволяет просматривать страницу при наведении курсора на внутреннюю ссылку без необходимости фактического перехода на эту страницу.
+Плагин «Предпросмотр страницы» позволяет просматривать страницу при наведении курсора на внутреннюю ссылку без необходимости фактического перехода на эту страницу.
 
 ![[Pasted image 13.png]]
 
