--- a/Плагины/Пространства.md
+++ b/Плагины/Пространства.md
@@ -4,9 +4,9 @@
 
 ### Сохранить пространство
 
-Кликните по значку «Пространства» на боковой панели чтобы открыть раздел управления пространствами.
+Нажмите на значок «Пространства» на боковой панели, чтобы открыть раздел управления пространствами.
 
-Задайте для имя для текущего пространства и нажмите кнопку «Сохранить». После чего оно появится в списке ниже.
+Задайте имя для текущего пространства и нажмите кнопку «Сохранить». После чего оно появится в списке ниже.
 
 ### Загрузить пространство
 
