--- a/Плагины/Слайды.md
+++ b/Плагины/Слайды.md
@@ -1,9 +1,9 @@
-Плагин Слайды позволяет делать простые презентации прямо внутри Obsidian.
+Плагин «Слайды» позволяет делать простые презентации прямо внутри Obsidian.
 
 ### Советы по использованию
 
 1. Для разделения слайдов используйте новую строку и `---` как разделитель.
-2. Чтобы начать презентацию, выберите пункт Начать презентацию в дополнительном меню в правом верхнем углу области заметки:
+2. Чтобы начать презентацию, выберите пункт «Начать презентацию» в дополнительном меню области заметки:
 
 ![[Pasted image 14.png]]
 
