--- a/Плагины/Список плагинов.md
+++ b/Плагины/Список плагинов.md
@@ -2,7 +2,7 @@
 
 Вы также можете создать свой собственный плагин. См. [[Сторонние плагины#Для разработчиков|сторонние плагины]].
 
-Управлять плагинами можно через меню Настройки, которое можно вызвать в нижней части левой панели. Некоторые из плагинов имеются свои отдельные настройки, которые могут быть заданы в соответствующей вкладке, которая появляется в Настройках после включения плагина.
+Управлять плагинами можно через меню Настройки, которое можно вызвать в нижней части левой панели. Некоторые из плагинов имеются свои отдельные настройки, которые могут быть заданы в соответствующей вкладке, появляющейся в настройках приложения после включения плагина.
 
 ### Текущий список официальных плагинов
 
