--- a/Продвинутое использование/Сторонние плагины.md
+++ b/Продвинутое использование/Сторонние плагины.md
@@ -18,15 +18,15 @@ Obsidian позволяет разработчикам писать сторон
 
 Помните, что сторонние плагины могут получать доступ к файлам на вашем компьютере, подключаться к Интернету и даже устанавливать дополнительные программы. Чтобы узнать больше о безопасности плагинов, см. [[Сторонние плагины#Безопасность плагинов|соответствующий раздел]].
 
-Чтобы установить сторонние плагины, вам необходимо отключить безопасный режим в разделе Настройки => Сторонние плагины => Безопасный режим.
+Чтобы установить сторонние плагины, вам необходимо отключить безопасный режим в разделе **Настройки => Сторонние плагины => Безопасный режим**.
 
 #### Поиск и установка плагинов сообщества
 
-После отключения безопасного режима вы можете найти сторонние плагины, созданные сообществом, в разделе Настройки => Сторонние плагины => Плагины сообщества => Обзор.
+После отключения безопасного режима вы можете найти сторонние плагины, созданные сообществом, в разделе **Настройки => Сторонние плагины => Плагины сообщества => Обзор**.
 
-На этой странице вы можете просматривать плагины по популярности или искать определенные плагины. Кликните по названию плагина, чтобы просмотреть подробные сведения и инструкции от автора плагина. На странице с описанием плагина вы можете нажать кнопку «Установить», чтобы установить плагин.
+На этой странице вы можете просматривать плагины по популярности или искать определенные плагины. Нажмите на название плагина, чтобы просмотреть подробные сведения и инструкции от автора плагина. На странице с описанием плагина вы можете нажать кнопку «Установить», чтобы установить плагин.
 
-После установки вы можете найти установленные плагины в разделе Настройки => Сторонние плагины. Добавленные плагины необходимо включить, чтобы они начали работать. Вы также можете удалить их там.
+После установки вы можете найти установленные плагины в разделе **Настройки => Сторонние плагины**. Добавленные плагины необходимо включить, чтобы они начали работать. Вы также можете удалить их там.
 
 ### Безопасность плагинов
 
