--- a/Руководства/Встраивание вложений в заметки.md
+++ b/Руководства/Встраивание вложений в заметки.md
@@ -1,12 +1,12 @@
 ### Вложенные файлы
 
-Вы можете вложить в заметку файлы, такие как изображения или аудио-файлы. Используйте следующий синтаксис `![[filename.png]]`:
+Вы можете вложить в заметку файлы, такие как изображения или аудиофайлы. Используйте следующий синтаксис `![[filename.png]]`:
 
 ![[Engelbart.jpg]]
 
 ![[Excerpt from Mother of All Demos (1968).ogg]]
 
-Вы можете вложить PDF-файл в заметку используя тот же синтаксис. В дополнении к этому, выможете указать определенную страницу внутри него: `![[My File.pdf#page=number]]`.
+Вы можете вложить PDF-файл в заметку используя тот же синтаксис. В дополнении к этому, вы можете указать определенную страницу внутри него: `![[My File.pdf#page=number]]`.
 
 ### Вложенные заметки
 
@@ -16,7 +16,7 @@
 
 ### Использование iframe
 
-«iframe» – это способ вложения одной веб-страницы в другую. Он может использоваться, так как Markdown поддерживает использование HTML, который является простейшим языком для построения веб-страниц, которые мы видим каждый день.
+«iframe» — это способ вложения одной веб-страницы в другую. Он может использоваться, так как Markdown поддерживает использование HTML, который является простейшим языком для построения веб-страниц, которые мы видим каждый день.
 
 Например, такая запись:
 
@@ -34,7 +34,7 @@
 <iframe src="ВСТАВЬТЕ ВАШУ ССЫЛКУ ЗДЕСЬ"></iframe>
 ```
 
-Некоторые веб-сайты имеют осбенности, не позволяющие их встраивать. Например, вы не можете встроить видео с YouTube, используя обычную ссылку, но вы можете встроить его с использованием ссылки вида `https://www.youtube.com/embed/VIDEO_ID`.
+Некоторые веб-сайты имеют особенности, не позволяющие их встраивать. Например, вы не можете встроить видео с YouTube, используя обычную ссылку, но вы можете встроить его с использованием ссылки вида `https://www.youtube.com/embed/VIDEO_ID`.
 
 Если вы хотите встроить веб-сайт, попробуйте поискать для него встраивание в формате «{название_сайта} embed iframe».
 
@@ -70,8 +70,8 @@
 
 Вы можете изменять размер изображений используя следующий синтаксис:
 
-В формате Markdown `![AltText|100x100](https://url/to/image.png)`, где `100x100` – это `ШИРИНАxВЫСОТА`.
+В формате Markdown `![AltText|100x100](https://url/to/image.png)`, где `100x100` соответствует `ШИРИНАxВЫСОТА`.
 
 В формате обычной вставки `![[image.png|100x100]]`.
 
-Чтобы сохранить соотношение сторон изображения при масштабировании опустите параметр высоты `![[image.png|100]]`.
+Чтобы сохранить соотношение сторон изображения при масштабировании, опустите параметр высоты `![[image.png|100]]`.
