--- a/Руководства/Добавление псевдонимов к заметке.md
+++ b/Руководства/Добавление псевдонимов к заметке.md
@@ -8,7 +8,7 @@ aliases: псевдоним, псевдонимы
 
 ### Добавление псевдонимов
 
-Начинася с версии 0.9.16, вы можете указывать ключ "aliases" в [[Заголовок YAML|заголовке YAML]] следующим образом:
+Начиная с версии 0.9.16, вы можете указывать ключ "aliases" в [[Заголовок YAML|заголовке YAML]] следующим образом:
 
 ```
 ---
@@ -26,13 +26,13 @@ aliases: [ИИ, Искусственный Интеллект]
 
 ![[Insert alises.png]]
 
-Внутренняя ссылка с будет вставлена следующим образом: `[[Добавление псевдонима к заметке|псевдоним]]`.
+Внутренняя ссылка будет вставлена следующим образом: `[[Добавление псевдонима к заметке|псевдоним]]`.
 
 Примечание: ссылка на псевдоним заметки **НЕ** вставляется как `[[псевдоним]]` для обеспечения совместимости, чтобы другие приложения также могли распознать ее.
 
 ### Поиск упоминаний без ссылки
 
-После того как вы добавили псевдонимы к заметке, вы можете найти ее упоминания без ссылки как по имени заметки так и по ее псевдониму.
+После того как вы добавили псевдонимы к заметке, вы можете найти ее упоминания без ссылки как по имени заметки, так и по ее псевдониму.
 
 Например, после того как «ИИ» добавлен как псевдоним для «Искусственного Интеллекта», вы увидите упоминания «ИИ» в других файлах в секции [[Обратные ссылки]].
 
