--- a/Руководства/Импорт данных.md
+++ b/Руководства/Импорт данных.md
@@ -1,4 +1,4 @@
-Есть некоторые различия между тем как работают различные PKM и системы ведения заметок. Это означает, что перемещение данных между ними может быть немного сложным. В большинстве случаев то, что вы используете может быть сконвертировано в Markdown и будет весьма неплохо работать в Obsidian. Но с некоторыми вещами, такими как теги и ссылки, могут быть сложности.
+Есть некоторые различия между тем как работают различные PKM и системы ведения заметок. Это означает, что перемещение данных между ними может быть немного сложным. В большинстве случаев все что вам нужно может быть сконвертировано в Markdown и будет весьма неплохо работать в Obsidian. Но с некоторыми вещами, такими как теги и ссылки, могут быть сложности.
 
 На нашем форуме есть [тема с подборкой методов](https://forum.obsidian.md/t/meta-post-migration-workflows/768) импорта данных, разработанных другими пользователями. На данный момент она включает:
 
@@ -13,7 +13,7 @@
 
 Но если вы не видите свою систему в этом списке, просмотрите сообщение на форуме, возможно, кто-то решил вашу проблему с момента написания этого документа.
 
-Также следует отметить, что создатели nvUltra, еще одной Markdown-программы для создания заметок, собрали на своем сайте [подборку способов экспорта данных для nvUltra](https://nvultra.com/help/importing). В большинстве случаев способы идентичны, и как минимум, это полезное место для начала.
+Также следует отметить, что создатели nvUltra, ещё одной Markdown-программы для создания заметок, собрали на своем сайте [подборку способов экспорта данных для nvUltra](https://nvultra.com/help/importing). В большинстве случаев способы идентичны, и как минимум, это полезное место для начала.
 
 ## Встроенные инструменты
 
@@ -29,7 +29,7 @@
 
 > 3. Распакуйте архив "Roam-Export-xxxxxxxxxxxxx.zip" в папку.
 
-> 4. Кликните по значку «Другое хранилище» в нижнем левом углу приложения и выберите параметр «Открыть папку как хранилище».
+> 4. Нажмите на значок «Другое хранилище» в нижнем левом углу приложения и выберите параметр «Открыть папку как хранилище».
 > Выберите папку в которую вы только что распаковали архив.
 
 > 5. Используйте плагин [[Импорт Markdown-файлов]] для конвертации Markdown-файлов из формата Roam Research в формат Obsidian.
@@ -46,6 +46,6 @@
 
 Ссылки в Obsidian требуют полного совпадения с именем заметки. Это означает что `[[202001010000]]` не будет правильно ссылаться на `[[202001010000 My Note]]`.
 
-Для того, чтобы исправить это, вы можете использовать плагин [[Импорт Markdown-файлов]] для конвертации Zettelkasten ссылок в формат `[[202001010000 My Note]]` или в `[[202001010000 My Note|My Note]]`.
+Для того чтобы исправить это, вы можете использовать плагин [[Импорт Markdown-файлов]] для конвертации Zettelkasten ссылок в формат `[[202001010000 My Note]]` или в `[[202001010000 My Note|My Note]]`.
 
 Вас также может заинтересовать плагин [[Префикс Zettelkasten]].
