--- a/Руководства/Переименование заметок.md
+++ b/Руководства/Переименование заметок.md
@@ -2,8 +2,8 @@
 
 ![[Pasted image 6.png]]
 
-Редактирование названия так же можно вызвать нажатием клавиши `F2` как в режиме редактирования, так и в режиме Предварительного просмотра.
+Редактирование названия так же можно вызвать нажатием клавиши `F2` как в режиме редактирования, так и в режиме предварительного просмотра.
 
-Если же вы хотите переименовать заметку, которую вы сейчас не редактируете, откройте [[Файловый менеджер]], кликните правой кнопкой на заметке или папке и выберите «Переименовать»:
+Если же вы хотите переименовать заметку, которую вы сейчас не редактируете, откройте [[Файловый менеджер]], нажмите правой кнопкой мыши на заметке или папке и выберите «Переименовать»:
 
 ![[Pasted image 7.png]]
