--- a/Руководства/Работа с несколькими заметками.md
+++ b/Руководства/Работа с несколькими заметками.md
@@ -4,15 +4,15 @@
 
 ##### 1. ==Используйте клавишу Ctrl/Cmd== когда хотите открыть что-либо в новой области.
 
-По умолчанию, когда вы кликаете по чему-либо, оно открывается в активной области. Активная область отмечена выделенной полосой под заголовком файла, а имя открытого файла отображается ярче, чем в неактивной области.
+По умолчанию, когда вы нажимаете на что-либо, оно открывается в активной области. Активная область отмечена подсвеченной полосой под заголовком файла, а имя открытого файла отображается ярче, чем в неактивной области.
 
-Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы кликаете по чему-либо в режиме предварительного просмотра и `Shift + Ctrl/Cmd` в режиме редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] %%работа с обратными ссылками%% (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` кликнуть по кнопке Просмотр/Редактирование в строке заголовка и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
+Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы нажимаете на что-либо в режиме предварительного просмотра и `Shift + Ctrl/Cmd` в режиме редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` нажать на кнопку «Просмотр/Редактирование» в строке заголовка файла и открыть ее в новой области. При использовании [[Быстрый переход|Быстрого перехода]], удерживание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
 
 ---
 
 ##### 2. Вы можете создавать новые области ==разделением==.
 
-Для создания дополнительных областей просмотра, вы можете разделить текущую панель пополам по горизонтали или вертикали. Сделайте это с помощью меню в правом верхнем углу области, используйте палитру команд или задайте [[Сочетания клавиш|сочетание клавиш]].
+Для создания дополнительных областей просмотра, вы можете разделить текущую панель пополам по горизонтали или вертикали. Сделайте это с помощью дополнительного меню в правом верхнем углу области, используйте палитру команд или задайте [[Сочетания клавиш|сочетание клавиш]].
 
 ![[Pasted image 16.png]]
 
@@ -30,11 +30,11 @@
 
 ##### 4. Используйте ==связанные области== для просмотра.
 
-[[Связанная область]] создается, если удерживая `Ctrl/Cmd` кликнуть по кнопке Просмотр/Редактирование в строке заголовка.
+[[Связанная область]] создается, если удерживая `Ctrl/Cmd` нажать на кнопку «Просмотр/Редактирование» в строке заголовка файла.
 
 При привязке к другой области положение прокрутки областей будет синхронизировано, и если вы откроете файл в одной области, в связанной области откроется тот же файл.
 
-[[Связанная область|Связанные области]] будут отмечены значком звена цепочки. Вы можете навести курсор на значок, чтобы увидеть какая область связана с какой, или нажать на значок чтобы отвязать области друг от друга.
+[[Связанная область|Связанные области]] будут отмечены значком звена цепочки. Вы можете навести курсор на значок, чтобы увидеть какая область связана с какой, или нажать на значок, чтобы отвязать области друг от друга.
 
 Для получения дополнительной информации см. [[Связанная область]].
 
