--- a/Руководства/Работа с несколькими хранилищами.md
+++ b/Руководства/Работа с несколькими хранилищами.md
@@ -1,16 +1,16 @@
 Собрание заметок в Obsidian называется хранилищем. Хранилище состоит из папки и всех ее подпапок. Прямо сейчас вы смотрите на хранилище `Справка Obsidian`, которое представляет собой просто папку с файлами, включенными в Obsidian.
 
-Вы можете открыть другое хранилище где угодно на вашем компьютере и оно сохранит свои собственные индивидуальные [[Список плагинов|плагины]] и [[Добавление пользовательских CSS|стили оформления]]. Это полезно, например, если у вас есть одно хранилище, в котором вы храните заметки и другое хранилище, в котором вы пишете в развернутой форме.
+Вы можете открыть другое хранилище где угодно на вашем компьютере, и оно сохранит свои собственные индивидуальные [[Список плагинов|плагины]] и [[Добавление пользовательских CSS|стили оформления]]. Это полезно, например, если у вас есть одно хранилище, в котором вы храните заметки и другое хранилище, в котором вы пишете в развернутой форме.
 
-Новое или существующее хранилище можно открыть с помощью кнопки чуть выше шестеренки кнопки «Настроек».
+Новое или существующее хранилище можно открыть с помощью кнопки чуть выше шестеренки кнопки «Настройки».
 
 ![[Vault picker.png]]
 
-У вас есть возможность открыть уже существующую папку с файлами Markdown, создать новое хранилище (которое, по сути, просто создать новую папку, в которую вы будете помещать файлы Markdown), либо открыть специальное хранилище, содержащее файлы этой справки. Хранилище справки хранится в специальном каталоге Obsidian (см. [[Как Obsidian хранит данные]]), но в остальном – это такой же каталог файлов, как и любой другой. 
+У вас есть возможность открыть уже существующую папку с файлами Markdown. Или создать новое хранилище (по сути, просто создать новую папку, в которую вы будете помещать файлы Markdown). Либо открыть специальное хранилище, содержащее файлы этой справки. Хранилище справки хранится в специальном каталоге Obsidian (см. [[Как Obsidian хранит данные]]), но в остальном — это такой же каталог файлов, как и любой другой. 
 
 [[Создание внутренних ссылок|Внутренние ссылки]] не используются совместно между хранилищами. Если у вас есть хранилище внутри другого хранилища, это может привести к сложностям в работе, мы не рекомендуем так делать.
 
-Всегда помните, что хранилище – это просто набор файлов Markdown. Вы можете использовать любые методы управления файлами, которые вы обычно использовали бы для перемещения их в своей файловой системе, и Obsidian будет автоматически обновляться, учитывать изменения.
+Всегда помните, что хранилище — это просто набор файлов Markdown. Вы можете использовать любые методы управления файлами, которые вы обычно использовали бы для перемещения их в своей файловой системе, и Obsidian будет автоматически обновляться, учитывать изменения.
 
 ### Перемещение настроек между хранилищами
 
