--- a/Руководства/Создание внутренних ссылок.md
+++ b/Руководства/Создание внутренних ссылок.md
@@ -12,8 +12,8 @@
 
 ### Переход по ссылкам
 
-- Для перехода по ссылке в области предварительного просмотра, просто кликните по ней.
-- Для открытия ссылку в новой области из области предварительного просмотра, кликните по ней удерживая `Ctrl/Cmd`.
-- Для перехода по ссылке в режиме редактирования, кликните по ней удерживая `Ctrl/Cmd`.
-- Для открытия ссылку в новой области из режима редактирования, кликните по ней удерживая `Ctrl/Cmd-Shift`.
+- Для перехода по ссылке в области предварительного просмотра, просто нажмите на неё.
+- Для открытия ссылку в новой области из области предварительного просмотра, нажмите на неё удерживая `Ctrl/Cmd`.
+- Для перехода по ссылке в режиме редактирования, нажмите на неё удерживая `Ctrl/Cmd`.
+- Для открытия ссылку в новой области из режима редактирования, нажмите на неё удерживая `Ctrl/Cmd-Shift`.
 - Для предварительного просмотра содержимого файла по ссылке, без перехода из текущей заметки, включите плагин [[Предпросмотр страницы]]. При наведении курсора на ссылку будет отображаться всплывающее окно.
