--- a/Руководства/Создание ссылок на блоки.md
+++ b/Руководства/Создание ссылок на блоки.md
@@ -8,9 +8,9 @@
 
 Для ссылки на блок в определенном файле, начините набор с `[[именифайла` для вызова списка подходящих файлов. После выбора файла наберите `^` и продолжите набор для поиска блока на который хотите сослаться.
 
-После того, как вы нажмете Enter, для вас будет сгенерирована ссылка на этот блок в формате, аналогичном `[[filename#^dcf64c]]`, где `dcf64c` идентификатор блока, который только что был сгенерирован для вас. 
+После того как вы нажмете Enter, для вас будет сгенерирована ссылка на этот блок в формате, аналогичном `[[filename#^dcf64c]]`, где `dcf64c` идентификатор блока, который только что был сгенерирован для вас. 
 
-Если вы не уверены, в каком файле находится блок, другой способ – начать ввод с `[[^^` и искать блоки во всех файлах. Поиск будет производиться по всем блокам в вашем хранилище, что может привести к небольшой задержке, если ваше хранилище большое.
+Если вы не уверены, в каком файле находится блок, другой способ — начать ввод с `[[^^` и искать блоки во всех файлах. Поиск будет производиться по всем блокам в вашем хранилище, что может привести к небольшой задержке, если ваше хранилище большое.
 
 Например, [[Создание ссылок на блоки#^dcf64c|dcf64c]] это ссылка на блок выше.
 
