--- a/Руководства/Сочетания клавиш.md
+++ b/Руководства/Сочетания клавиш.md
@@ -1,6 +1,6 @@
 Если плагин [[Палитра команд]] включен, для его вызова вы можете использовать `Ctrl/Cmd+P`. Он покажет вам все доступные в настоящее время команды и сочетания клавиш для них.
 
-Большинство сочетаний клавиш можно настроить в соответствии с вашими потребностями в разделе Настройки => Сочетания клавиш.
+Большинство сочетаний клавиш можно настроить в соответствии с вашими потребностями в разделе **Настройки => Сочетания клавиш**.
 
 Сочетания клавиш по умолчанию перечислены ниже.
 
@@ -19,7 +19,7 @@
 Импорт Markdown файлов            |   | Не назначено             
 Сегодняшняя заметка               |   | Не назначено             
 Создать новую Zettelkasten заметку|   | Не назначено             
-Откруть случайную заметку         |   | Не назначено             
+Открыть случайную заметку         |   | Не назначено             
 Вернуться назад                   |   | `Ctrl/Cmd-Alt+Left arrow`  
 Перейти вперед                    |   | `Ctrl/Cmd-Alt+Right arrow`  
 Другое хранилище                  |   | Не назначено             
