--- a/Руководства/Управление вложениями.md
+++ b/Руководства/Управление вложениями.md
@@ -6,9 +6,9 @@
 2. Перетаскивание;
 3. Скачивание файла в папку хранилища.
 
-После вставки, эти вложенные файлы остаются обычными файлами и все еще могут быть доступны через вашу файловую систему.
+После вставки, эти вложенные файлы остаются обычными файлами и всё ещё могут быть доступны через вашу файловую систему.
 
-Пожалуйста обратите внимание, что обрабатываются только [[Поддерживаемые форматы файлов|поддерживаемые форматы файлов]].
+Пожалуйста, обратите внимание, что обрабатываются только [[Поддерживаемые форматы файлов|поддерживаемые форматы файлов]].
 
 ### Копирование и вставка
 
@@ -18,23 +18,23 @@
 
 ### Перетаскивание
 
-При перетаские вание файла из системного проводника, он таже будет скопирован в ваше хранилище.
+При перетаскивании файла из системного проводника, он также будет скопирован в ваше хранилище.
 
 ### Скачивание файла в папку хранилища
 
 Это может хорошо работать в сочетании с [[Сбор данных#Использование расширения для браузера|использованием расширения для браузера]].
 
-Вы также можете сохранять изображения из вашего браузера напрямую в директорию хранилища для дальнейшего использования.
+Вы также можете сохранять изображения из вашего браузера напрямую в папку хранилища для дальнейшего использования.
 
 ## Изменения места хранения вложенных файлов
 
-По умолчанию новые вложенные файлы сохраняются в корневую директорию вашего хранилища. Вы можете изменить этот параметр в разделе Настройки => Файлы и ссылки => Место для вложенных файлов по умолчанию.
+По умолчанию новые вложенные файлы сохраняются в корневую папку вашего хранилища. Вы можете изменить этот параметр в разделе **Настройки => Файлы и ссылки => Место для вложенных файлов по умолчанию**.
 
 ### Выбор папки
 
 Вы можете выбрать постоянную папку для размещения вложенных файлов в ней. Для этого необходимо выбрать вариант «В папке, указанной ниже» и выбрать имя папки в вашем хранилище, в появившемся ниже поле.
 
-Кроме того, вы можете кликнуть правой кнопкой мыши по папке в [[Файловый менеджер|файловом менеджере]] и выбрать пункт «Установить как папку для вложенных файлов».
+Кроме того, вы можете нажать правой кнопкой мыши на папку в [[Файловый менеджер|Файловом менеджере]] и выбрать пункт «Установить как папку для вложенных файлов».
 
 ### Папка где расположен файл
 
@@ -44,6 +44,6 @@
 
 Вы также можете сохранять вложенные файлы в папку под папкой, в которой находится текущий файл.
 
-Для это необходимо выбрать параметр «Subfolder under current folder» и указать имя подпапки в появившемся ниже поле. Например если в качестве имени подпапки вы укажите `файлы` и ваша заметка находится в директории `ХРАНИЛИЩЕ/папка/путь/`, то вложенные файлы будут помещаться в директорию `ХРАНИЛИЩЕ/папка/путь/файлы`, при работе с этой заметкой.
+Для это необходимо выбрать параметр «Subfolder under current folder» и указать имя подпапки в появившемся ниже поле. Например, если в качестве имени подпапки вы укажите `файлы` и ваша заметка находится в папке `ХРАНИЛИЩЕ/папка/путь/`, то вложенные файлы будут помещаться в папку `ХРАНИЛИЩЕ/папка/путь/файлы`, при работе с этой заметкой.
 
 Вам не нужно создавать подпапку заранее, если она не существует, Obsidian создаст ее для вас.
