--- a/Obsidian/Мобильное приложение бета-тестирование.md
+++ b/Obsidian/Мобильное приложение бета-тестирование.md
@@ -8,7 +8,7 @@
 
 Бета-тестирование мобильного приложения доступно на данный момент только для держателей лицензии [Obsidian Catalyst](https://obsidian.md/pricing).
 
-Если у вас уже есть лицензия Catalyst, [присоединяйтесь к нам в Discord](https://discord.gg/veuWUTm). Если у вас еще нет бейджа, [[Лицензия Catalyst#Бейдж в Discord|вы можете получить его на странице своего аккаунта]].
+Если у вас уже есть лицензия Catalyst, [присоединяйтесь к нам в Discord](https://discord.gg/veuWUTm). Если у вас ещё нет бейджа, [[Лицензия Catalyst#Бейдж в Discord|вы можете получить его на странице своего аккаунта]].
 
 Как только вы получите свой бейдж, вы сможете получить доступ к бета-тестированию и возможности оставить свой отзыв в канале \#mobile. Инструкции по установке мобильного приложения находятся в закрепленных сообщениях в канале \#mobile.
 
