--- a/Лицензии и дополнительные сервисы/Политика возврата средств.md
+++ b/Лицензии и дополнительные сервисы/Политика возврата средств.md
@@ -10,6 +10,6 @@
 
 ## Все остальные сервисы
 
-Для всех остальных сервисов и лицензий, включая [[Коммерческая лицензия|Коммерческую лицензию]], сервисы [[Obsidian Publish]] и [[Obsidian Sync]], вы можете запросить возврат средств в течение 3 дней с момента покупки без объяснения причин. Пожалуйста свяжитесь с нами через support@obsidian.md или в Discord.
+Для всех остальных сервисов и лицензий, включая [[Коммерческая лицензия|Коммерческую лицензию]], сервисы [[Obsidian Publish]] и [[Obsidian Sync]], вы можете запросить возврат средств в течение 3 дней с момента покупки без объяснения причин. Пожалуйста, свяжитесь с нами через support@obsidian.md или в Discord.
 
 По истечение 3 дней, если вам потребуется возврат средств в связи с исключительными обстоятельствами, не стесняйтесь обращаться к нам.
