--- a/Плагины/Восстановление файлов.md
+++ b/Плагины/Восстановление файлов.md
@@ -1,6 +1,6 @@
-Восстановление файлов это основной плагин, который поможет вам восстановить ваши данные в случае любой аварийной ситуации – ошибка пользователя, отключение электропитания, или неправильная работы плагина или скрипта.
+«Восстановление файлов» — это основной плагин, который поможет вам восстановить ваши данные в случае любой аварийной ситуации, такой как ошибка пользователя, отключение электропитания или неправильная работа плагина или скрипта.
 
-Плагин Восстановление файлов по умолчанию включен, так как включать его после потери данных будет уже слишком поздно.
+Плагин «Восстановление файлов» по умолчанию включен, так как включать его после потери данных будет уже слишком поздно.
 
 ## Как это работает
 
@@ -16,22 +16,22 @@
 
 В случае потери данных вы можете воспользоваться следующей инструкцией, чтобы найти сохраненные снимки:
 
-1. Откройте Настройки;
-2. Откройте вкладку плагина Восстановление файлов;
-3. Нажмите на кнопку Обзор в подразделе Снимки;
-4. В открывшемся окне, в строке поиска слева, наберите имя файла, который вы хотите восстановить. Если имя файла не отображается, это означает, что для этого файла не было сделано сников;
+1. Откройте настройки приложения;
+2. Откройте вкладку плагина «Восстановление файлов»;
+3. Нажмите на кнопку «Обзор» в подразделе «Снимки»;
+4. В открывшемся окне, в строке поиска слева, наберите имя файла, который вы хотите восстановить. Если имя файла не отображается, это означает, что для этого файла не было сделано снимков;
 5. После выбора нужного файла с левой стороны будет отображаться список сделанных снимков по дате. Выберите тот, который хотите восстановить;
-6. Содержимое снимка будет отображаться с правой стороны окна. Вы можете выбрать для копирования какую-либо его часть или нажать на кнопку Скопировать в буфер обмена (Copy to clipboard) чтобы скопировать его содержимое целиком.
+6. Содержимое снимка будет отображаться с правой стороны окна. Вы можете выбрать для копирования какую-либо его часть или нажать на кнопку «Скопировать в буфер обмена» (Copy to clipboard), чтобы скопировать его содержимое целиком.
 
 ## Настройки
 
 ### Интервал создания снимков
 
-Минимальный интервал между созданием снимков, по умолчанию – 5 минут.
+Минимальный интервал между созданием снимков. По умолчанию составляет 5 минут.
 
 ### История хранения снимков
 
-Приод хранения снимков в днях. По умолчанию снимки хранятся 7 дней.
+Период хранения снимков в днях. По умолчанию снимки хранятся 7 дней.
 
 ### Очистка истории снимков
 
