--- a/Плагины/Диктофон.md
+++ b/Плагины/Диктофон.md
@@ -1,9 +1,9 @@
-Диктофон – это плагин, который позволяет делать аудио-запись, не покидая Obsidian. Он полезен для записи звука на лекциях и встречах, когда по каким-либо причинам вы не успеваете печатать, или для записи важных дискуссий, чтобы не упустить ни одной детали.
+«Диктофон» — это плагин, который позволяет делать аудиозапись, не покидая Obsidian. Он полезен для записи звука на лекциях и встречах, когда по каким-либо причинам вы не успеваете печатать, или для записи важных дискуссий, чтобы не упустить ни одной детали.
 
-Для использования просто кликните по значку микрофона в левой панели:
+Для использования просто нажмите на значок микрофона в левой панели:
 
 ![[Pasted image 8.png]]
 
 Микрофон будет окрашен красным во время записи.
 
-Чтобы закончить запись, кликните по нему еще раз. Теперь аудиофайл сохранен в ваше хранилище, а сама запись будет добавлена в конец текущей заметки.
+Чтобы закончить запись, нажмите на него ещё раз. Теперь аудиофайл сохранен в ваше хранилище, а сама запись будет добавлена в конец текущей заметки.
