--- a/Плагины/Ежедневные заметки.md
+++ b/Плагины/Ежедневные заметки.md
@@ -1,7 +1,7 @@
-Плагин Ежедневные заметки создаст новую заметку, которая будет автоматически названа текущей датой. Если такая заметка уже существует, то плагин откроет эту заметку. Это удобный способ вести ежедневный журнал, список дел или список ссылок на заметки, которые вы создали в определенный день.
+Плагин «Ежедневные заметки» создаст новую заметку, которая будет автоматически названа текущей датой. Если такая заметка уже существует, то плагин откроет эту заметку. Это удобный способ вести ежедневный журнал, список дел или список ссылок на заметки, которые вы создали в определенный день.
 
-Формат даты и папку по умолчанию для ежедневных заметок можно задать в Настройках на вкладке плагина Ежедневные заметки. По умолчанию используется формат даты "ГГГГГ-ММ-ДД" (формат ISO). Этот формат означает, что список ежедневных заметок, отсортированный в алфавитном порядке, будет также и в хронологическом порядке.
+Формат даты и папку по умолчанию для ежедневных заметок можно задать в настройках на вкладке плагина «Ежедневные заметки». По умолчанию используется формат даты "ГГГГГ-ММ-ДД" (формат ISO). Этот формат означает, что список ежедневных заметок, отсортированный в алфавитном порядке, будет также и в хронологическом порядке.
 
 Вы также можете определить файл-шаблон для ежедневных заметок. Этот шаблон будет скопирован в вашу ежедневную заметку в момент создания, и это хорошее место для тегов или ссылок, которые вы используете каждый день.
 
-Ежедневную заметку можно создать либо кликнув по значку календаря в левой панели, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать сочетание клавиш в разделе Настройки => [[Сочетания клавиш]].
+Ежедневную заметку можно создать либо нажав на значок календаря в левой панели окна приложения, либо с помощью [[Палитра команд|Палитры команд]]. Также возможно задать для нее [[Сочетания клавиш|сочетание клавиш]].
