--- a/Плагины/Избранное.md
+++ b/Плагины/Избранное.md
@@ -1,5 +1,5 @@
-Избранное (заметки отмеченные звездочкой) – это удобный способ держать важные заметки под рукой. Включение плагина создаст на левой панели закладку со звездочкой, нажатие на которую будет выводить список добавленных в избранное заметок.
+Плагин «Избранное» (заметки отмеченные звездочкой) — это удобный способ держать важные заметки под рукой. Включение плагина создаст на левой панели вкладку со звездочкой, нажатие на которую будет выводить список добавленных в избранное заметок.
 
-У вас есть несколько вариантов добавления файла в Избранное. Это можно сделать в файловом менеджере по правому клику на нужном файле, выбрав пункт меню «Добавить в избранное», или через меню открытой заметки, или набрав команду в [[Палитра команд|Палитре команд]], или просто нажав сочетание клавиш, которое может быть задано в разделе Настройки => [[Сочетания клавиш]].
+У вас есть несколько вариантов добавления файла в «Избранное». Это можно сделать в файловом менеджере по нажатию правой кнопки мыши на нужном файле, выбрав пункт меню «Добавить в избранное», или через дополнительное меню открытой заметки, или набрав команду в [[Палитра команд|Палитре команд]], или просто задать для нее [[Сочетания клавиш|сочетание клавиш]].
 
 Избранные файлы и поисковые запросы могут быть упорядочены путем их перетаскивания.
