--- a/Плагины/Палитра команд.md
+++ b/Плагины/Палитра команд.md
@@ -1,9 +1,9 @@
-Палитра команд включена по умолчанию, так как это очень полезный способ получить доступ практически ко всему функционалу Obsidian без необходимости запоминать все сочетания клавиш. Нажмите `Ctrl/Cmd+P` для вызова палитры и просто напишите название команды. Если у команды есть горячая клавиша, она будет отображена справа.
+Плагин «Палитра команд» включен по умолчанию, так как это очень полезный способ получить доступ практически ко всему функционалу Obsidian без необходимости запоминать все сочетания клавиш. Нажмите `Ctrl/Cmd+P` для вызова окна «Палитры команд» и просто напишите название команды. Если у команды есть сочетание клавиш, оно будет отображено справа от нее.
 
-Собственные сочетания клавиш для Палитры команд можно задавать через меню Настройки => Сочетания клавиш. Кликните по значку `*` справа от команды и введите любую угодную вам комбинацию клавиш.
+Собственные сочетания клавиш для «Палитры команд» можно задавать в разделе **Настройки => Сочетания клавиш**. Нажмите на значок `*` справа от команды и введите любую угодную вам комбинацию клавиш.
 
 ### Советы по использованию
 
 - Для просмотра полного списка команд не надо ничего набирать. Стрелки позволяют передвигаться по палитре вверх и вниз, а клавиша `Return` активирует команду.
 
-- В Палитре команд используется нечеткий поиск, так что можно писать часть слова для получения списка совпадений. Например можно написать `иввф` для поиска команды `Искать во всех файлах`.
+- В «Палитре команд» используется нечеткий поиск, так что можно писать часть слова для получения списка совпадений. Например, можно написать `иввф` для поиска команды `Искать во всех файлах`.
