--- a/Плагины/Публикация.md
+++ b/Плагины/Публикация.md
@@ -1,38 +1,38 @@
-Плагин Публикация позволяет публиковать заметки из вашего хранилища на вашем сайте через приложение Obsidian.
+Плагин «Публикация» позволяет публиковать заметки из вашего хранилища на вашем сайте через приложение Obsidian.
 
-Для получения дополнительной информации о сервисе Obsidian Publish™, о том, что входит в его состав, как он работает, и о конфиденциальности, см. дополнительный сервис [[Obsidian Publish]].
+Для получения дополнительной информации о сервисе Obsidian Publish™, о том, что входит в его состав, как он работает, и о конфиденциальности, см. раздел дополнительный сервис [[Obsidian Publish]].
 
 ### Включение плагина
 
-В Obsidian в разделе Настройки => Основные плагины включите плагин Публикация. После этого в левой панели появится значок Публикации (которая выглядит как бумажный самолетик).
+В Obsidian в разделе **Настройки => Основные плагины** включите плагин **Публикация**. После этого в левой панели появится значок «Публикация изменений» (который выглядит как бумажный самолетик).
 
-После включения плагина вы также можете задать сочетание клавишь для этого параметра или использовать палитру команд для доступа к нему.
+После включения плагина вы также можете задать сочетание клавиш для этого параметра или использовать «Палитру команд» для доступа к нему.
 
 ### Настройка вашего сайта
 
-В плагине Публикация вы увидите возможность создать сайт, введя уникальный идентификатор сайта. После публикации ваш сайт будет доступен по адресу `https://publish.obisidian.md/{site-id}`.
+В плагине «Публикация» вы увидите возможность создать сайт, введя уникальный идентификатор сайта. После публикации ваш сайт будет доступен по адресу `https://publish.obisidian.md/{site-id}`.
 
-После создания уникального идентификатора сайта, у вас будет возможность задать имя вашему сайту, выбрать домашнюю страницу, установить тему и переключить различные компоненты, такие как графический вид, оглавление и т.д. Вы можете переключить эти параметры, нажав на значок шестеренки рядом с названием вашего сайта в верхней части плагина Публикация.
+После создания уникального идентификатора сайта, у вас будет возможность задать имя вашему сайту, выбрать домашнюю страницу, установить тему и переключить различные компоненты, такие как графический вид, оглавление и т.д. Вы можете переключить эти параметры, нажав на значок шестеренки рядом с названием вашего сайта в верхней части плагина «Публикация».
 
 ### Выбор файлов для публикации
 
 После настройки вашего сайта вы сможете публиковать свои заметки!
 
-На свежем, пустом сайте все Ваши заметки появятся в разделе "Новое", что означает, что они являются новыми для Вашего сайта. На этом этапе Вы можете выбрать, какие файлы Вы хотите опубликовать, а затем нажать кнопку Опубликовать.
+На свежем, пустом сайте все ваши заметки появятся в разделе «Новое», что означает, что они являются новыми для вашего сайта. На этом этапе вы можете выбрать, какие файлы вы хотите опубликовать, а затем нажать кнопку «Опубликовать».
 
-==Заметка о конфиденциальности: Obsidian Publish не знает (и не сохраняет) ни о каких заметках, которые вы решили не публиковать (и ни о каких заметках, которые вы впоследствии удалите со своего опубликованного сайта)==.
+==Примечание о конфиденциальности: Obsidian Publish не знает о заметках, которые вы решили не публиковать. И не хранит заметки, которые вы впоследствии удалите со своего опубликованного сайта==.
 
 ### Внесение изменений
 
-При внесении изменений в уже опубликованные заметки эти изменения будут автоматически выбраны при открытии диалога плагина Публикация. Вы можете снять флажок с любых файлов, которые вы не хотите публиковать на своем сайте.
+При внесении изменений в уже опубликованные заметки эти изменения будут автоматически выбраны при открытии диалога плагина «Публикация». Вы можете снять флажок с любых файлов, которые вы не хотите публиковать на своем сайте.
 
 ### Изменение параметров сайта
 
-Вы можете изменить различные параметры сайта, нажав на значок шестеренки рядом с названием сайта в диалоге Публикация изменений.
+Вы можете изменить различные параметры сайта, нажав на значок шестеренки рядом с названием сайта в диалоговом окне «Публикация изменений».
 
 #### Метаданные
 
-В этом разделе вы можете установить имя сайта, файл домашней страницы (файл, который увидят пользователи, зашедшие на ваш сайт), и управлять пользовательским доменом (см. [[Obsidian Publish#Пользовательский домен|этот гайд]] для настройки пользовательского домена).
+В этом разделе вы можете установить имя сайта, файл домашней страницы (файл, который увидят пользователи, зашедшие на ваш сайт), и управлять пользовательским доменом (см. [[Obsidian Publish#Пользовательский домен|руководство]] по настройке пользовательского домена).
 
 #### Внешний вид
 
@@ -55,8 +55,8 @@
 - Навигация (по умолчанию включен)
 - Локального граф (по умолчанию включен)
 - Оглавление / структура заголовков (по умолчанию выключен)
-- Обратые ссылки (по умолчанию выключена)
-- Панель поиска (по умолчанию выключена, требуется файловый менеджер)
+- Обратные ссылки (по умолчанию выключена)
+- Панель поиска (по умолчанию выключена, требует компонент Навигация)
 
 #### Безопасность
 
@@ -64,20 +64,20 @@
 
 Несколько паролей облегчают обмен с несколькими группами. Когда вы больше не хотите делиться с одной группой посетителей, вы можете просто удалить этот пароль. Каждый пароль также может быть назван для вашего удобства.
 
-С 2021/01/20 все заметки на вашем сайте защищены одним и тем же набором паролей.
+Начинаю с 20 января 2021 г. все заметки на вашем сайте защищены одним и тем же набором паролей.
 
 ### Добавление связанных заметок
 
-Кнопка Add linked позволяет включить для публикации в хранилище любые заметки, на которые есть ссылки, связанные с любыми выбранными в данный момент заметками. Это хороший способ гарантировать отсутствие мертвых ссылок на вашем опубликованном сайте.
+Кнопка «Добавить связанные» позволяет включить для публикации в хранилище любые заметки, на которые есть ссылки, связанные с любыми выбранными в данный момент заметками. Это хороший способ гарантировать отсутствие мертвых ссылок на вашем опубликованном сайте.
 
-В качестве примера предположим, что вы выбрали для публикации заметку А. Предположим, что в заметке A есть ссылки на заметку P, заметку Q и заметку R, то если вы нажмёте кнопку «Добавить ссылку», то все заметки P, Q и R будут выбраны для публикации вместе с текущей выбранной заметкой A.
+В качестве примера предположим, что вы выбрали для публикации заметку А. Предположим, что в заметке A есть ссылки на заметку P, заметку Q и заметку R, то если вы нажмёте кнопку «Добавить связанные», то все заметки P, Q и R будут выбраны для публикации вместе с текущей выбранной заметкой A.
 
-Каждый раз, когда вы нажимаете кнопку Add linked, плагин Публикация будет искать ссылки в каждом текущем выбранном файле для публикации. Пожалуйста, убедитесь, что вы просмотрели список выбранных файлов перед тем, как нажимать кнопку «Опубликовать».
+Каждый раз, когда вы нажимаете кнопку «Добавить связанные», плагин «Публикация» будет искать ссылки в каждом текущем выбранном файле для публикации. Пожалуйста, убедитесь, что вы просмотрели список выбранных файлов перед тем, как нажимать кнопку «Опубликовать».
 
 ### Удаление опубликованных заметок
 
-У вас всегда есть возможность удалить любые заметки, которые были опубликованы на вашем сайте. В плагине Publish будут перечислены все опубликованные заметки, из которых любые/все могут быть выбраны для удаления. Удаление заметки с вашего сайта **не** удаляет заметку из хранилища, что дает вам возможность повторно опубликовать заметку в будущем.
+У вас всегда есть возможность удалить любые заметки, которые были опубликованы на вашем сайте. В плагине «Публикация» будут перечислены все опубликованные заметки, из которых любые/все могут быть выбраны для удаления. Удаление заметки с вашего сайта **не** удаляет заметку из хранилища, что дает вам возможность повторно опубликовать заметку в будущем.
 
 ### Удаление всего сайта
 
-Если вы хотите удалить весь сайт, кликните по значку переключения (стрелки) в верхней части плагина Публикация. Затем нажмите на кнопку `X`, чтобы удалить ваш сайт. Обратите внимание: это удалит только ваш общедоступный сайт, но не повлияет ни на какие файлы в вашем хранилище. Вы всегда можете выбрать повторную публикацию своих заметок.
+Если вы хотите удалить весь сайт, нажмите на значок переключения (стрелки) в верхней части плагина «Публикация». Затем нажмите на кнопку `X`, чтобы удалить ваш сайт. Обратите внимание: это удалит только ваш общедоступный сайт, но не повлияет ни на какие файлы в вашем хранилище. Вы всегда можете выбрать повторную публикацию своих заметок.
