--- a/Продвинутое использование/Ранние сборки.md
+++ b/Продвинутое использование/Ранние сборки.md
@@ -1,10 +1,10 @@
-Ранние (инсайдерские) сборки – это экспериментальные версии Obsidian, которые раздаются держателям лицензии Catalyst на добровольной основе.
+Ранние (инсайдерские) сборки — это экспериментальные версии Obsidian, которые раздаются держателям лицензии Catalyst на добровольной основе.
 
-Пожалуйста, обратите внимание, что ранние сборки менее стабильны, чем общедоступные версии, поэтому, если вы предпочитаете беспроблемную версию, вам не нужно их включать.
+Пожалуйста, обратите внимание, что ранние сборки менее стабильны, чем общедоступные версии, поэтому если вы предпочитаете беспроблемную версию, вам не нужно их включать.
 
 ### Как включить раннюю сборку
 
-Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам Obsidian, до того, как эта версия станет доступна широкой публике. Чтобы получть к ним доступ, перейдите в раздел Настройки => Учетная запись и войдите в систему с паролем, который вы использовали на сайте Obsidian. Затем перейдите в Настройки => О программе и включите опцию «Получать ранние сборки».
+Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам Obsidian, до того, как эта версия станет доступна широкой публике. Чтобы получить к ним доступ, перейдите в раздел **Настройки => Учетная запись** и войдите в систему с паролем, который вы использовали на сайте Obsidian. Затем перейдите в раздел **Настройки => О программе** и включите опцию «Получать ранние сборки».
 
 ![[Insider.png]]
 
