--- a/Руководства/Работа с несколькими курсорами.md
+++ b/Руководства/Работа с несколькими курсорами.md
@@ -1,3 +1,3 @@
-Вы можете создать несколько курсоров, если удерживая `Alt` (`Option` в macOS) несколько раз кликните по разным частям текста. Это может быть полезно, когда вам необходимо внести несколько одинаковых изменений. Например добавить `-` перед несколькими строчками, чтобы сделать из них список. Или добавить `[[` к нескольким ссылкам скопированным из других источников.
+Вы можете создать несколько курсоров, если удерживая `Alt` (`Option` в macOS) несколько раз нажмете на разные части текста. Это может быть полезно, когда вам необходимо внести несколько одинаковых изменений. Например, добавить `-` перед несколькими строчками, чтобы сделать из них список. Или добавить `[[` к нескольким ссылкам скопированным из других источников.
 
-Для отмены режима нескольких курсоров, кликните в любую часть заметки без удержания клавиши-модификатора или нажмите `Esc`.
+Для отмены режима нескольких курсоров, нажмите на любую часть заметки без удержания клавиши-модификатора или нажмите `Esc`.
